# valora

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
apps/estimates/: apps.py  models.py  utils.py  views.py
apps/estimates/migrations/: 0001_initial.py  0002_update_inquiry_fields.py  0003_estimate_projection_arrays.py
apps/estimates/tests/: test_ai_service.py  test_models.py  test_views.py
config/: settings.py  urls.py
estimates/: admin.py  models.py
estimates/tests/: test_models.py
project/: settings.py  urls.py
templates/: home.html
templates/estimates/: detail.html  wizard.html
