[project]
name = "valora"
version = "0.1.0"
description = "Property estimate tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.0,<6",
    "openai>=1.102.0",
    "psycopg[binary]>=3.1,<4",
    "pydantic-ai>=0.8.1",
]

[dependency-groups]
dev = [
    "anyio>=4.0.0",
    "django-stubs>=5.2.2",
    "ipdb>=0.13.13",
    "pre-commit>=4.3.0",
    "pyright>=1.1.404",
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "ruff>=0.12.11"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.setuptools]
py-modules = []
